--- a/index.html
+++ b/index.html
@@ -1,57 +1,91 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Trunk or Treat</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+<head>
+    <title>Trunk or Treat</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
-        <main>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-<img src="/Screenshot 2024-10-09 115226.png" alt="trunk image" class="img-fluid">
-                      </div>
-                      <div class="col-md-4">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+</head>
 
-                      </div>
-                      <div class="col-md-4">
-                      
-                      </div>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Trunk or Treat</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home-section">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#showcase-section">Trunk Showcase</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#schedule-section">Schedule</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+        </nav>
+    </header>
+    <main>
+        <section id="home-section" class="container-fluid position-relative">
+            <div class="video-background">
+                <video autoplay muted loop id="background-video">
+                    <source src="/830_pumpkin_Jack-O-Lantern_Jack_O_Lantern_hd16351080p12000br.mp4" type="video/mp4">
+                </video>
+            </div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-        <script src="js\script.js"></script>
-    </body>
+            <div class="content text-white">
+                <h2>Welcome to Marlboro High School Trunk or Treat Event!</h2>
+                <p><strong>Date:</strong> October 29th (Rain Date: October 30th)</p>
+                <p><strong>Time:</strong> 4:00 PM - 5:30 PM</p>
+                <p><strong>Location:</strong> Marlboro High School Parking Lot</p>
+                <p>This event will feature over 30 trunks, music, fun activities, and snacks for sale! A free event for
+                    kids ages 12 and under. All proceeds will go to benefit the American Cancer Society.
+                <p>
+
+                    <button id="more-info-btn" class="btn btn-primary">More Info</button>
+                <div id="more-info" style="display: none;" class="mt-3">
+                    <p><strong>Highlights:</strong></p>
+                    <ul>
+                        <li>Wear a Halloween costume!</li>
+                        <li>Snacks & refreshments available for purchase.</li>
+                        <li>A Nut-Free Event!</li>
+                        <li>Proceeds benefit the American Cancer Society.</li>
+                        <li>Face Painting.</li>
+                        <li>Feds on the Go and Goldy's Ice Cream will be present for refreshments!</li>
+                    </ul>
+                    <p>For more info, contact <a href="mailto:kmcgeough@frhsd.com">Kmcgeough@frhsd.com</a>.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
