added images trying to style description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -66,6 +67,60 @@
                         <li>Feds on the Go and Goldy's Ice Cream will be present for refreshments!</li>
                     </ul>
                     <p>For more info, contact <a href="mailto:kmcgeough@frhsd.com">Kmcgeough@frhsd.com</a>.</p>
+                </div>
+            </div>
+        </section>
+        <!--Showcase section-->
+        <section id="showcase-section" class="container mt-5">
+            <h2 class="text-center">Trunk Showcase</h2>
+            <div class="row g-4">
+                <!--Trunk 1-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/1333f3fc-00de-4ba2-8079-e889e3ecd13a.jpg" class="img-fluid trunk-image" alt="Trunk 1">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5>hrllo</h5>
+                        <p>hello</p>
+                    </div>
+                </div>
+                <!--Trunk 2-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/6eb3c9c2-8978-4dff-a02d-e0140afa64df.jpg" class="img-fluid trunk-image" alt="Trunk 2">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5></h5>
+                        <p></p>
+                    </div>
+                </div>
+                <!--Trunk 3-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/970f3b48-0a06-4446-960e-654abcbdfccb.jpg" class="img-fluid trunk-image" alt="Trunk 3">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5></h5>
+                        <p></p>
+                    </div>
+                </div>
+                <!--Trunk 4-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/cb9b2962-47d4-4b26-ada8-557691e2f7cd.jpg" class="img-fluid trunk-image" alt="Trunk 4">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5></h5>
+                        <p></p>
+                    </div>
+                </div>
+                <!--Trunk 5-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/e4e5357e-6b07-4ef3-92c5-3d7f36dec5ee.jpg" class="img-fluid trunk-image" alt="Trunk 5">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5></h5>
+                        <p></p>
+                    </div>
+                </div>
+                <!--Trunk 6-->
+                <div class="col-md-4 trunk-item d-flex flex-column align-items-center">
+                    <img src="/images/e58a82e5-39fc-44e5-ab3f-7ecfe901f765.jpg" class="img-fluid trunk-image" alt="Trunk 6">
+                    <div class="trunk-description text-center p-3" style="display: none;">
+                        <h5></h5>
+                        <p></p>
+                    </div>
                 </div>
             </div>
         </section>
