--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ira3tll.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Trunk or Treat</a>
+                <a class="navbar-brand" href="#" style="color: white;">Trunk or Treat</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
+                    <span class="navbar-toggler-icon" ></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
@@ -72,7 +73,7 @@
         </section>
         <!--Showcase section-->
         <section id="showcase-section" class="container mt-5">
-            <h2 class="text-center">Trunk Showcase</h2>
+            <h2 class="text-center" style="color: white;">Trunk Showcase</h2>
             <div class="row justify-content-center">
                 <!--Trunk 1-->
                 <div class="col-12 col-sm-6 col-md-4 trunk-item d-flex flex-column align-items-center">
@@ -118,6 +119,18 @@
                 </div>
             </div>
         </section>
+        <!--Schedule-->
+        <section id="schedule-section" class="container mt-5">
+            <h2 class="text-center text-white">Event Schedule</h2>
+            
+            <div class="schedule-item">
+                <h3 class="event-heading">Event Start</h3>
+                <div class="event-details">
+                    <p class="event-description">Join us for the kickoff of the Trunk or Treat event!</p>
+                    <img src="/images/thumbnail_Black Orange and Violet Halloween Calendar of Events Flyer.png" alt="Event Image" class="event-image">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <!-- place footer here -->
@@ -131,9 +144,8 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        
     <script src="script.js"></script>
 </body>
 
