--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h3 class="event-heading">Event Start</h3>
                 <div class="event-details">
                     <p class="event-description">Join us for the kickoff of the Trunk or Treat event!</p>
-                    <img src="images/thumbnail_Black Orange and Violet Halloween Calendar of Events Flyer.png" alt="Event Image" class="event-image">
+                    <img src="/images/thumbnail_Black Orange and Violet Halloween Calendar of Events Flyer.png" alt="Event Image" class="event-image">
                 </div>
             </div>
         </section>
